2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: fix for width if no intial items

2011-01-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fixed addHandlerRightClick. Thanks Marie V

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaR5classes.R: can use "command" signal, not just tkbind.

	* R/gslider.R: using ttk::scale for themed widget. We give up the
	theme, but canuse the "command" binding.

2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: new method update to get window to naturally resize

	* R/glayout.R: added dim method

2011-01-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: similar to gradio. Now based on R5 class

	* R/gradio.R: based on R5 class now, not on older. Allows one to
	extend/shorten length of radio group

2010-12-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gaction.R: added key.accel value. key.accel should be like "Control-a"

	* R/aaaGenerics.R (setenabled_ttkwidget): fixed enabled<- method

	* R/gexpandgroup.R: changed visible<- method to adjust height, not
	remove widget. Latter didn't resize gracefully.

2010-12-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: changed backend to use a widget designed for autocompletion.

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fixed isExtant

2010-11-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: call as.character on text before display -- fix
	bug when logical

2010-11-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fixed bug in addSpring. Still doesn't work horizontally

	* R/aaaGenerics.R: changed default anchor value to c(-1,1) or
	NW. This can be adjusted through through the option "gw:tcltkDefaultAnchor".

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>