@@ -1,3 +1,8 @@
+2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/aaaGenerics.R: worked on "add" method and its expand, fill,
+	anchor arguments
+
 2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gdroplist.R: fix for width if no intial items
